--- a/styles.css
+++ b/styles.css
@@ -42,15 +42,19 @@ a:hover {
 
 input[type=text] {
     width: 80%;
-    padding: 1vh 4vh;
-    border-radius: 20px;
-    border-color: rgb(57, 57, 57);
-    border-style: solid;
+    padding: 1.3vh 4vh;
+    border-radius: 30px;
+    border: 1px solid rgb(154, 154, 154);
     margin-bottom: 2vh;
     background-image: url('searchicon.png');
-    background-position: 10px 10px;
-    background-size: 3%;
+    background-position: 11px 10px;
+    background-size: 4%;
     background-repeat: no-repeat;
+}
+
+input[type=text]:focus, input[type=text]:hover {
+    outline: none;
+    box-shadow: 0px 0px 8px 2px rgba(184, 184, 184, 0.3);
 }
 
 input[type=submit] {
